src/parser/idyl.output
State 48 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 57 conflicts: 2 shift/reduce
State 83 conflicts: 1 shift/reduce
State 85 conflicts: 1 shift/reduce
State 86 conflicts: 1 shift/reduce
State 130 conflicts: 1 shift/reduce
State 147 conflicts: 2 shift/reduce
State 170 conflicts: 1 shift/reduce
State 189 conflicts: 1 shift/reduce
State 229 conflicts: 1 shift/reduce
State 232 conflicts: 1 shift/reduce
State 237 conflicts: 2 shift/reduce
State 287 conflicts: 1 shift/reduce


Grammar

    0 $accept: program YYEOF

    1 program: top_level_statements
    2        | ε

    3 top_level_statements: top_level_statements top_level_statement
    4                     | top_level_statement

    5 top_level_statement: function_or_flow_definition
    6                    | process_block
    7                    | IMPORT LPAREN STRING_LITERAL RPAREN
    8                    | IDENTIFIER ASSIGN IMPORT LPAREN STRING_LITERAL RPAREN
    9                    | MODULE LPAREN STRING_LITERAL RPAREN
   10                    | IDENTIFIER ASSIGN MODULE LPAREN STRING_LITERAL RPAREN

   11 function_or_flow_definition: function_definition
   12                            | flow_definition

   13 function_definition: IDENTIFIER LPAREN parameter_list RPAREN ASSIGN expression
   14                    | IDENTIFIER LPAREN RPAREN ASSIGN expression
   15                    | IDENTIFIER LPAREN parameter_list RPAREN ASSIGN expression lambda_block
   16                    | IDENTIFIER LPAREN RPAREN ASSIGN expression lambda_block
   17                    | IDENTIFIER ASSIGN expression
   18                    | IDENTIFIER ASSIGN expression lambda_block

   19 flow_definition: FLOW IDENTIFIER ASSIGN flow_literal
   20                | FLOW IDENTIFIER LPAREN parameter_list RPAREN ASSIGN flow_literal
   21                | FLOW IDENTIFIER ASSIGN LBRACE flow_members RBRACE
   22                | FLOW IDENTIFIER LPAREN parameter_list RPAREN ASSIGN LBRACE flow_members RBRACE

   23 flow_members: flow_members IDENTIFIER COLON flow_literal
   24             | flow_members IDENTIFIER ON IDENTIFIER COLON flow_literal
   25             | IDENTIFIER COLON flow_literal
   26             | IDENTIFIER ON IDENTIFIER COLON flow_literal

   27 flow_literal: LBRACKET flow_elements RBRACKET
   28             | generator_expression

   29 flow_elements: flow_elements COMMA expression REPEAT_MARKER
   30              | flow_elements COMMA expression
   31              | expression REPEAT_MARKER
   32              | expression

   33 generator_expression: LBRACKET IDENTIFIER IN expression COLON expression RBRACKET
   34                     | LBRACKET IDENTIFIER IN expression RANGE expression COLON expression RBRACKET
   35                     | LBRACKET IDENTIFIER IN expression RANGE expression RANGE expression COLON expression RBRACKET

   36 process_block: PROCESS COLON LBRACE process_body_statements RBRACE
   37              | PROCESS IDENTIFIER COMMA DUR ASSIGN expression COLON LBRACE process_body_statements RBRACE
   38              | PROCESS IDENTIFIER COLON LBRACE process_body_statements RBRACE

   39 process_body_statements: process_body_statements process_body_statement
   40                        | process_body_statement

   41 process_body_statement: postfix_expression ASSIGN expression
   42                       | IDENTIFIER ASSIGN expression
   43                       | EMIT IDENTIFIER ASSIGN expression
   44                       | stop_statement
   45                       | start_statement
   46                       | pause_statement
   47                       | resume_statement
   48                       | catch_block
   49                       | at_block
   50                       | on_block
   51                       | each_block
   52                       | expression

   53 at_block: AT_OP LPAREN expression RPAREN COLON LBRACE process_body_statements RBRACE

   54 on_block: ON expression COLON LBRACE process_body_statements RBRACE

   55 each_dt_opt: ε
   56            | COMMA DT ASSIGN expression
   57            | COMMA expression

   58 each_body: LBRACE process_body_statements RBRACE

   59 each_block: EACH IDENTIFIER IN expression each_dt_opt COLON each_body
   60           | EACH IDENTIFIER IN expression RANGE expression each_dt_opt COLON each_body
   61           | EACH IDENTIFIER IN expression RANGE expression RANGE expression each_dt_opt COLON each_body

   62 stop_statement: STOP IDENTIFIER

   63 start_statement: START IDENTIFIER

   64 pause_statement: PAUSE IDENTIFIER
   65                | PAUSE

   66 resume_statement: RESUME IDENTIFIER
   67                 | RESUME

   68 catch_block: CATCH postfix_expression NAMESPACE_DOT IDENTIFIER COLON LBRACE process_body_statements RBRACE
   69            | CATCH postfix_expression NAMESPACE_DOT END COLON LBRACE process_body_statements RBRACE

   70 lambda_block: LAMBDA_BLOCK LBRACE init_block lambda_statements RBRACE
   71             | LAMBDA_BLOCK LBRACE init_block RBRACE
   72             | LAMBDA_BLOCK LBRACE lambda_statements RBRACE

   73 init_block: INIT COLON LBRACE lambda_statements RBRACE

   74 lambda_statements: lambda_statements lambda_statement
   75                  | lambda_statement

   76 lambda_statement: postfix_expression ASSIGN expression
   77                 | IDENTIFIER ASSIGN expression
   78                 | EMIT IDENTIFIER ASSIGN expression
   79                 | DT ASSIGN expression
   80                 | expression

   81 block_body: block_body SEMICOLON block_body_statement
   82           | block_body_statement
   83           | ε

   84 block_body_statement: IDENTIFIER ASSIGN expression
   85                     | EMIT IDENTIFIER ASSIGN expression
   86                     | stop_statement
   87                     | start_statement
   88                     | pause_statement
   89                     | resume_statement
   90                     | expression

   91 parameter_list: parameter_list COMMA parameter
   92               | parameter

   93 parameter: IDENTIFIER
   94          | IDENTIFIER TRIGGER
   95          | IDENTIFIER ASSIGN expression
   96          | DT ASSIGN expression

   97 expression: assignment_expression

   98 assignment_expression: ternary_expression

   99 ternary_expression: logical_or_expression
  100                   | logical_or_expression QUESTION ternary_options

  101 ternary_options: ternary_options SEMICOLON logical_or_expression
  102                | logical_or_expression

  103 logical_or_expression: logical_and_expression
  104                      | logical_or_expression OR logical_and_expression

  105 logical_and_expression: bitwise_or_expression
  106                       | logical_and_expression AND bitwise_or_expression

  107 bitwise_or_expression: bitwise_xor_expression
  108                      | bitwise_or_expression OR bitwise_xor_expression

  109 bitwise_xor_expression: bitwise_and_expression
  110                       | bitwise_xor_expression XOR bitwise_and_expression

  111 bitwise_and_expression: equality_expression
  112                       | bitwise_and_expression AND equality_expression

  113 equality_expression: relational_expression
  114                    | equality_expression EQ relational_expression
  115                    | equality_expression NEQ relational_expression

  116 relational_expression: shift_expression
  117                      | relational_expression LT shift_expression
  118                      | relational_expression GT shift_expression
  119                      | relational_expression LE shift_expression
  120                      | relational_expression GE shift_expression

  121 shift_expression: additive_expression
  122                 | shift_expression LSHIFT additive_expression
  123                 | shift_expression RSHIFT additive_expression

  124 additive_expression: multiplicative_expression
  125                    | additive_expression PLUS multiplicative_expression
  126                    | additive_expression MINUS multiplicative_expression

  127 multiplicative_expression: unary_expression
  128                          | multiplicative_expression MUL unary_expression
  129                          | multiplicative_expression DIV unary_expression
  130                          | multiplicative_expression MOD unary_expression

  131 unary_expression: postfix_expression
  132                 | NOT unary_expression
  133                 | MINUS unary_expression
  134                 | MEMORY_OP LPAREN expression RPAREN
  135                 | MEMORY_OP LPAREN expression COMMA expression RPAREN

  136 postfix_expression: primary_expression
  137                   | postfix_expression LPAREN argument_list RPAREN
  138                   | postfix_expression LPAREN RPAREN
  139                   | postfix_expression DOT IDENTIFIER
  140                   | postfix_expression NAMESPACE_DOT IDENTIFIER
  141                   | postfix_expression NAMESPACE_DOT IDENTIFIER LPAREN argument_list RPAREN
  142                   | postfix_expression NAMESPACE_DOT IDENTIFIER LPAREN RPAREN
  143                   | postfix_expression LBRACKET expression RBRACKET

  144 primary_expression: IDENTIFIER
  145                   | NUMBER
  146                   | TIME_LITERAL
  147                   | TRIGGER
  148                   | REST
  149                   | DT
  150                   | DUR
  151                   | AGE
  152                   | STRING_LITERAL
  153                   | LPAREN expression RPAREN
  154                   | flow_literal
  155                   | FLOW LBRACE flow_members RBRACE
  156                   | STOP
  157                   | LBRACE block_body RBRACE

  158 argument_list: argument_list COMMA argument
  159              | argument

  160 argument: expression
  161         | IDENTIFIER ASSIGN expression
  162         | DT ASSIGN expression


Terminals, with rules where they appear

    YYEOF (0) 0
    error (256)
    IDENTIFIER <std::string> (258) 8 10 13 14 15 16 17 18 19 20 21 22 23 24 25 26 33 34 35 37 38 42 43 59 60 61 62 63 64 66 68 77 78 84 85 93 94 95 139 140 141 142 144 161
    NUMBER <std::string> (259) 145
    TIME_LITERAL <std::string> (260) 146
    STRING_LITERAL <std::string> (261) 7 8 9 10 152
    FLOW (262) 19 20 21 22 155
    PROCESS (263) 36 37 38
    IMPORT (264) 7 8
    MODULE (265) 9 10
    INIT (266) 73
    EMIT (267) 43 78 85
    CATCH (268) 68 69
    END (269) 69
    DT (270) 56 79 96 149 162
    DUR (271) 37 150
    STOP (272) 62 156
    START (273) 63
    AGE (274) 151
    PAUSE (275) 64 65
    RESUME (276) 66 67
    LAMBDA_BLOCK (277) 70 71 72
    NAMESPACE_DOT (278) 68 69 140 141 142
    MEMORY_OP (279) 134 135
    RANGE (280) 34 35 60 61
    REST (281) 148
    AT_OP (282) 53
    REPEAT_MARKER <std::string> (283) 29 31
    PLUS (284) 125
    MINUS (285) 126 133
    MUL (286) 128
    DIV (287) 129
    MOD (288) 130
    EQ (289) 114
    NEQ (290) 115
    LT (291) 117
    GT (292) 118
    LE (293) 119
    GE (294) 120
    AND (295) 106 112
    OR (296) 104 108
    XOR (297) 110
    NOT (298) 132
    LSHIFT (299) 122
    RSHIFT (300) 123
    QUESTION (301) 100
    ASSIGN (302) 8 10 13 14 15 16 17 18 19 20 21 22 37 41 42 43 56 76 77 78 79 84 85 95 96 161 162
    COLON (303) 23 24 25 26 33 34 35 36 37 38 53 54 59 60 61 68 69 73
    SEMICOLON (304) 81 101
    COMMA (305) 29 30 37 56 57 91 135 158
    DOT (306) 139
    TRIGGER (307) 94 147
    LPAREN (308) 7 8 9 10 13 14 15 16 20 22 53 134 135 137 138 141 142 153
    RPAREN (309) 7 8 9 10 13 14 15 16 20 22 53 134 135 137 138 141 142 153
    LBRACKET (310) 27 33 34 35 143
    RBRACKET (311) 27 33 34 35 143
    LBRACE (312) 21 22 36 37 38 53 54 58 68 69 70 71 72 73 155 157
    RBRACE (313) 21 22 36 37 38 53 54 58 68 69 70 71 72 73 155 157
    ON (314) 24 26 54
    EACH (315) 59 60 61
    IN (316) 33 34 35 59 60 61


Nonterminals, with rules where they appear

    $accept (62)
        on left: 0
    program <idyl::parser::node_ptr> (63)
        on left: 1 2
        on right: 0
    top_level_statements <std::vector<idyl::parser::stmt_ptr>> (64)
        on left: 3 4
        on right: 1 3
    top_level_statement <idyl::parser::stmt_ptr> (65)
        on left: 5 6 7 8 9 10
        on right: 3 4
    function_or_flow_definition <idyl::parser::stmt_ptr> (66)
        on left: 11 12
        on right: 5
    function_definition <std::shared_ptr<idyl::parser::function_definition>> (67)
        on left: 13 14 15 16 17 18
        on right: 11
    flow_definition <std::shared_ptr<idyl::parser::flow_definition>> (68)
        on left: 19 20 21 22
        on right: 12
    flow_members <std::vector<std::shared_ptr<idyl::parser::flow_member>>> (69)
        on left: 23 24 25 26
        on right: 21 22 23 24 155
    flow_literal <idyl::parser::expr_ptr> (70)
        on left: 27 28
        on right: 19 20 23 24 25 26 154
    flow_elements <std::vector<idyl::parser::expr_ptr>> (71)
        on left: 29 30 31 32
        on right: 27 29 30
    generator_expression <idyl::parser::expr_ptr> (72)
        on left: 33 34 35
        on right: 28
    process_block <std::shared_ptr<idyl::parser::process_block>> (73)
        on left: 36 37 38
        on right: 6
    process_body_statements <std::vector<idyl::parser::stmt_ptr>> (74)
        on left: 39 40
        on right: 36 37 38 39 53 54 58 68 69
    process_body_statement <idyl::parser::stmt_ptr> (75)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52
        on right: 39 40
    at_block <std::shared_ptr<idyl::parser::at_block>> (76)
        on left: 53
        on right: 49
    on_block <std::shared_ptr<idyl::parser::on_block>> (77)
        on left: 54
        on right: 50
    each_dt_opt <idyl::parser::expr_ptr> (78)
        on left: 55 56 57
        on right: 59 60 61
    each_body <std::vector<idyl::parser::stmt_ptr>> (79)
        on left: 58
        on right: 59 60 61
    each_block <std::shared_ptr<idyl::parser::each_block>> (80)
        on left: 59 60 61
        on right: 51
    stop_statement <std::shared_ptr<idyl::parser::stop_statement>> (81)
        on left: 62
        on right: 44 86
    start_statement <std::shared_ptr<idyl::parser::start_statement>> (82)
        on left: 63
        on right: 45 87
    pause_statement <std::shared_ptr<idyl::parser::pause_statement>> (83)
        on left: 64 65
        on right: 46 88
    resume_statement <std::shared_ptr<idyl::parser::resume_statement>> (84)
        on left: 66 67
        on right: 47 89
    catch_block <std::shared_ptr<idyl::parser::catch_block>> (85)
        on left: 68 69
        on right: 48
    lambda_block <std::shared_ptr<idyl::parser::lambda_block>> (86)
        on left: 70 71 72
        on right: 15 16 18
    init_block <std::shared_ptr<idyl::parser::init_block>> (87)
        on left: 73
        on right: 70 71
    lambda_statements <std::vector<idyl::parser::stmt_ptr>> (88)
        on left: 74 75
        on right: 70 72 73 74
    lambda_statement <idyl::parser::stmt_ptr> (89)
        on left: 76 77 78 79 80
        on right: 74 75
    block_body <std::vector<idyl::parser::stmt_ptr>> (90)
        on left: 81 82 83
        on right: 81 157
    block_body_statement <idyl::parser::stmt_ptr> (91)
        on left: 84 85 86 87 88 89 90
        on right: 81 82
    parameter_list <std::vector<idyl::parser::param_ptr>> (92)
        on left: 91 92
        on right: 13 15 20 22 91
    parameter <idyl::parser::param_ptr> (93)
        on left: 93 94 95 96
        on right: 91 92
    expression <idyl::parser::expr_ptr> (94)
        on left: 97
        on right: 13 14 15 16 17 18 29 30 31 32 33 34 35 37 41 42 43 52 53 54 56 57 59 60 61 76 77 78 79 80 84 85 90 95 96 134 135 143 153 160 161 162
    assignment_expression <idyl::parser::expr_ptr> (95)
        on left: 98
        on right: 97
    ternary_expression <idyl::parser::expr_ptr> (96)
        on left: 99 100
        on right: 98
    ternary_options <std::vector<idyl::parser::expr_ptr>> (97)
        on left: 101 102
        on right: 100 101
    logical_or_expression <idyl::parser::expr_ptr> (98)
        on left: 103 104
        on right: 99 100 101 102 104
    logical_and_expression <idyl::parser::expr_ptr> (99)
        on left: 105 106
        on right: 103 104 106
    bitwise_or_expression <idyl::parser::expr_ptr> (100)
        on left: 107 108
        on right: 105 106 108
    bitwise_xor_expression <idyl::parser::expr_ptr> (101)
        on left: 109 110
        on right: 107 108 110
    bitwise_and_expression <idyl::parser::expr_ptr> (102)
        on left: 111 112
        on right: 109 110 112
    equality_expression <idyl::parser::expr_ptr> (103)
        on left: 113 114 115
        on right: 111 112 114 115
    relational_expression <idyl::parser::expr_ptr> (104)
        on left: 116 117 118 119 120
        on right: 113 114 115 117 118 119 120
    shift_expression <idyl::parser::expr_ptr> (105)
        on left: 121 122 123
        on right: 116 117 118 119 120 122 123
    additive_expression <idyl::parser::expr_ptr> (106)
        on left: 124 125 126
        on right: 121 122 123 125 126
    multiplicative_expression <idyl::parser::expr_ptr> (107)
        on left: 127 128 129 130
        on right: 124 125 126 128 129 130
    unary_expression <idyl::parser::expr_ptr> (108)
        on left: 131 132 133 134 135
        on right: 127 128 129 130 132 133
    postfix_expression <idyl::parser::expr_ptr> (109)
        on left: 136 137 138 139 140 141 142 143
        on right: 41 68 69 76 131 137 138 139 140 141 142 143
    primary_expression <idyl::parser::expr_ptr> (110)
        on left: 144 145 146 147 148 149 150 151 152 153 154 155 156 157
        on right: 136
    argument_list <std::vector<std::shared_ptr<idyl::parser::argument>>> (111)
        on left: 158 159
        on right: 137 141 158
    argument <std::shared_ptr<idyl::parser::argument>> (112)
        on left: 160 161 162
        on right: 158 159


State 0

    0 $accept: • program YYEOF

    IDENTIFIER  shift, and go to state 1
    FLOW        shift, and go to state 2
    PROCESS     shift, and go to state 3
    IMPORT      shift, and go to state 4
    MODULE      shift, and go to state 5

    $default  reduce using rule 2 (program)

    program                      go to state 6
    top_level_statements         go to state 7
    top_level_statement          go to state 8
    function_or_flow_definition  go to state 9
    function_definition          go to state 10
    flow_definition              go to state 11
    process_block                go to state 12


State 1

    8 top_level_statement: IDENTIFIER • ASSIGN IMPORT LPAREN STRING_LITERAL RPAREN
   10                    | IDENTIFIER • ASSIGN MODULE LPAREN STRING_LITERAL RPAREN
   13 function_definition: IDENTIFIER • LPAREN parameter_list RPAREN ASSIGN expression
   14                    | IDENTIFIER • LPAREN RPAREN ASSIGN expression
   15                    | IDENTIFIER • LPAREN parameter_list RPAREN ASSIGN expression lambda_block
   16                    | IDENTIFIER • LPAREN RPAREN ASSIGN expression lambda_block
   17                    | IDENTIFIER • ASSIGN expression
   18                    | IDENTIFIER • ASSIGN expression lambda_block

    ASSIGN  shift, and go to state 13
    LPAREN  shift, and go to state 14


State 2

   19 flow_definition: FLOW • IDENTIFIER ASSIGN flow_literal
   20                | FLOW • IDENTIFIER LPAREN parameter_list RPAREN ASSIGN flow_literal
   21                | FLOW • IDENTIFIER ASSIGN LBRACE flow_members RBRACE
   22                | FLOW • IDENTIFIER LPAREN parameter_list RPAREN ASSIGN LBRACE flow_members RBRACE

    IDENTIFIER  shift, and go to state 15


State 3

   36 process_block: PROCESS • COLON LBRACE process_body_statements RBRACE
   37              | PROCESS • IDENTIFIER COMMA DUR ASSIGN expression COLON LBRACE process_body_statements RBRACE
   38              | PROCESS • IDENTIFIER COLON LBRACE process_body_statements RBRACE

    IDENTIFIER  shift, and go to state 16
    COLON       shift, and go to state 17


State 4

    7 top_level_statement: IMPORT • LPAREN STRING_LITERAL RPAREN

    LPAREN  shift, and go to state 18


State 5

    9 top_level_statement: MODULE • LPAREN STRING_LITERAL RPAREN

    LPAREN  shift, and go to state 19


State 6

    0 $accept: program • YYEOF

    YYEOF  shift, and go to state 20


State 7

    1 program: top_level_statements •
    3 top_level_statements: top_level_statements • top_level_statement

    IDENTIFIER  shift, and go to state 1
    FLOW        shift, and go to state 2
    PROCESS     shift, and go to state 3
    IMPORT      shift, and go to state 4
    MODULE      shift, and go to state 5

    $default  reduce using rule 1 (program)

    top_level_statement          go to state 21
    function_or_flow_definition  go to state 9
    function_definition          go to state 10
    flow_definition              go to state 11
    process_block                go to state 12


State 8

    4 top_level_statements: top_level_statement •

    $default  reduce using rule 4 (top_level_statements)


State 9

    5 top_level_statement: function_or_flow_definition •

    $default  reduce using rule 5 (top_level_statement)


State 10

   11 function_or_flow_definition: function_definition •

    $default  reduce using rule 11 (function_or_flow_definition)


State 11

   12 function_or_flow_definition: flow_definition •

    $default  reduce using rule 12 (function_or_flow_definition)


State 12

    6 top_level_statement: process_block •

    $default  reduce using rule 6 (top_level_statement)


State 13

    8 top_level_statement: IDENTIFIER ASSIGN • IMPORT LPAREN STRING_LITERAL RPAREN
   10                    | IDENTIFIER ASSIGN • MODULE LPAREN STRING_LITERAL RPAREN
   17 function_definition: IDENTIFIER ASSIGN • expression
   18                    | IDENTIFIER ASSIGN • expression lambda_block

    IDENTIFIER      shift, and go to state 22
    NUMBER          shift, and go to state 23
    TIME_LITERAL    shift, and go to state 24
    STRING_LITERAL  shift, and go to state 25
    FLOW            shift, and go to state 26
    IMPORT          shift, and go to state 27
    MODULE          shift, and go to state 28
    DT              shift, and go to state 29
    DUR             shift, and go to state 30
    STOP            shift, and go to state 31
    AGE             shift, and go to state 32
    MEMORY_OP       shift, and go to state 33
    REST            shift, and go to state 34
    MINUS           shift, and go to state 35
    NOT             shift, and go to state 36
    TRIGGER         shift, and go to state 37
    LPAREN          shift, and go to state 38
    LBRACKET        shift, and go to state 39
    LBRACE          shift, and go to state 40

    flow_literal               go to state 41
    generator_expression       go to state 42
    expression                 go to state 43
    assignment_expression      go to state 44
    ternary_expression         go to state 45
    logical_or_expression      go to state 46
    logical_and_expression     go to state 47
    bitwise_or_expression      go to state 48
    bitwise_xor_expression     go to state 49
    bitwise_and_expression     go to state 50
    equality_expression        go to state 51
    relational_expression      go to state 52
    shift_expression           go to state 53
    additive_expression        go to state 54
    multiplicative_expression  go to state 55
    unary_expression           go to state 56
    postfix_expression         go to state 57
    primary_expression         go to state 58


State 14

   13 function_definition: IDENTIFIER LPAREN • parameter_list RPAREN ASSIGN expression
   14                    | IDENTIFIER LPAREN • RPAREN ASSIGN expression
   15                    | IDENTIFIER LPAREN • parameter_list RPAREN ASSIGN expression lambda_block
   16                    | IDENTIFIER LPAREN • RPAREN ASSIGN expression lambda_block

    IDENTIFIER  shift, and go to state 59
    DT          shift, and go to state 60
    RPAREN      shift, and go to state 61

    parameter_list  go to state 62
    parameter       go to state 63


State 15

   19 flow_definition: FLOW IDENTIFIER • ASSIGN flow_literal
   20                | FLOW IDENTIFIER • LPAREN parameter_list RPAREN ASSIGN flow_literal
   21                | FLOW IDENTIFIER • ASSIGN LBRACE flow_members RBRACE
   22                | FLOW IDENTIFIER • LPAREN parameter_list RPAREN ASSIGN LBRACE flow_members RBRACE

    ASSIGN  shift, and go to state 64
    LPAREN  shift, and go to state 65


State 16

   37 process_block: PROCESS IDENTIFIER • COMMA DUR ASSIGN expression COLON LBRACE process_body_statements RBRACE
   38              | PROCESS IDENTIFIER • COLON LBRACE process_body_statements RBRACE

    COLON  shift, and go to state 66
    COMMA  shift, and go to state 67


State 17

   36 process_block: PROCESS COLON • LBRACE process_body_statements RBRACE

    LBRACE  shift, and go to state 68


State 18

    7 top_level_statement: IMPORT LPAREN • STRING_LITERAL RPAREN

    STRING_LITERAL  shift, and go to state 69


State 19

    9 top_level_statement: MODULE LPAREN • STRING_LITERAL RPAREN

    STRING_LITERAL  shift, and go to state 70


State 20

    0 $accept: program YYEOF •

    $default  accept


State 21

    3 top_level_statements: top_level_statements top_level_statement •

    $default  reduce using rule 3 (top_level_statements)


State 22

  144 primary_expression: IDENTIFIER •

    $default  reduce using rule 144 (primary_expression)


State 23

  145 primary_expression: NUMBER •

    $default  reduce using rule 145 (primary_expression)


State 24

  146 primary_expression: TIME_LITERAL •

    $default  reduce using rule 146 (primary_expression)


State 25

  152 primary_expression: STRING_LITERAL •

    $default  reduce using rule 152 (primary_expression)


State 26

  155 primary_expression: FLOW • LBRACE flow_members RBRACE

    LBRACE  shift, and go to state 71


State 27

    8 top_level_statement: IDENTIFIER ASSIGN IMPORT • LPAREN STRING_LITERAL RPAREN

    LPAREN  shift, and go to state 72


State 28

   10 top_level_statement: IDENTIFIER ASSIGN MODULE • LPAREN STRING_LITERAL RPAREN

    LPAREN  shift, and go to state 73


State 29

  149 primary_expression: DT •

    $default  reduce using rule 149 (primary_expression)


State 30

  150 primary_expression: DUR •

    $default  reduce using rule 150 (primary_expression)


State 31

  156 primary_expression: STOP •

    $default  reduce using rule 156 (primary_expression)


State 32

  151 primary_expression: AGE •

    $default  reduce using rule 151 (primary_expression)


State 33

  134 unary_expression: MEMORY_OP • LPAREN expression RPAREN
  135                 | MEMORY_OP • LPAREN expression COMMA expression RPAREN

    LPAREN  shift, and go to state 74


State 34

  148 primary_expression: REST •

    $default  reduce using rule 148 (primary_expression)


State 35

  133 unary_expression: MINUS • unary_expression

    IDENTIFIER      shift, and go to state 22
    NUMBER          shift, and go to state 23
    TIME_LITERAL    shift, and go to state 24
    STRING_LITERAL  shift, and go to state 25
    FLOW            shift, and go to state 26
    DT              shift, and go to state 29
    DUR             shift, and go to state 30
    STOP            shift, and go to state 31
    AGE             shift, and go to state 32
    MEMORY_OP       shift, and go to state 33
    REST            shift, and go to state 34
    MINUS           shift, and go to state 35
    NOT             shift, and go to state 36
    TRIGGER         shift, and go to state 37
    LPAREN          shift, and go to state 38
    LBRACKET        shift, and go to state 39
    LBRACE          shift, and go to state 40

    flow_literal          go to state 41
    generator_expression  go to state 42
    unary_expression      go to state 75
    postfix_expression    go to state 57
    primary_expression    go to state 58


State 36

  132 unary_expression: NOT • unary_expression

    IDENTIFIER      shift, and go to state 22
    NUMBER          shift, and go to state 23
    TIME_LITERAL    shift, and go to state 24
    STRING_LITERAL  shift, and go to state 25
    FLOW            shift, and go to state 26
    DT              shift, and go to state 29
    DUR             shift, and go to state 30
    STOP            shift, and go to state 31
    AGE             shift, and go to state 32
    MEMORY_OP       shift, and go to state 33
    REST            shift, and go to state 34
    MINUS           shift, and go to state 35
    NOT             shift, and go to state 36
    TRIGGER         shift, and go to state 37
    LPAREN          shift, and go to state 38
    LBRACKET        shift, and go to state 39
    LBRACE          shift, and go to state 40

    flow_literal          go to state 41
    generator_expression  go to state 42
    unary_expression      go to state 76
    postfix_expression    go to state 57
    primary_expression    go to state 58


State 37

  147 primary_expression: TRIGGER •

    $default  reduce using rule 147 (primary_expression)


State 38

  153 primary_expression: LPAREN • expression RPAREN

    IDENTIFIER      shift, and go to state 22
    NUMBER          shift, and go to state 23
    TIME_LITERAL    shift, and go to state 24
    STRING_LITERAL  shift, and go to state 25
    FLOW            shift, and go to state 26
    DT              shift, and go to state 29
    DUR             shift, and go to state 30
    STOP            shift, and go to state 31
    AGE             shift, and go to state 32
    MEMORY_OP       shift, and go to state 33
    REST            shift, and go to state 34
    MINUS           shift, and go to state 35
    NOT             shift, and go to state 36
    TRIGGER         shift, and go to state 37
    LPAREN          shift, and go to state 38
    LBRACKET        shift, and go to state 39
    LBRACE          shift, and go to state 40

    flow_literal               go to state 41
    generator_expression       go to state 42
    expression                 go to state 77
    assignment_expression      go to state 44
    ternary_expression         go to state 45
    logical_or_expression      go to state 46
    logical_and_expression     go to state 47
    bitwise_or_expression      go to state 48
    bitwise_xor_expression     go to state 49
    bitwise_and_expression     go to state 50
    equality_expression        go to state 51
    relational_expression      go to state 52
    shift_expression           go to state 53
    additive_expression        go to state 54
    multiplicative_expression  go to state 55
    unary_expression           go to state 56
    postfix_expression         go to state 57
    primary_expression         go to state 58


State 39

   27 flow_literal: LBRACKET • flow_elements RBRACKET
   33 generator_expression: LBRACKET • IDENTIFIER IN expression COLON expression RBRACKET
   34                     | LBRACKET • IDENTIFIER IN expression RANGE expression COLON expression RBRACKET
   35                     | LBRACKET • IDENTIFIER IN expression RANGE expression RANGE expression COLON expression RBRACKET

    IDENTIFIER      shift, and go to state 78
    NUMBER          shift, and go to state 23
    TIME_LITERAL    shift, and go to state 24
    STRING_LITERAL  shift, and go to state 25
    FLOW            shift, and go to state 26
    DT              shift, and go to state 29
    DUR             shift, and go to state 30
    STOP            shift, and go to state 31
    AGE             shift, and go to state 32
    MEMORY_OP       shift, and go to state 33
    REST            shift, and go to state 34
    MINUS           shift, and go to state 35
    NOT             shift, and go to state 36
    TRIGGER         shift, and go to state 37
    LPAREN          shift, and go to state 38
    LBRACKET        shift, and go to state 39
    LBRACE          shift, and go to state 40

    flow_literal               go to state 41
    flow_elements              go to state 79
    generator_expression       go to state 42
    expression                 go to state 80
    assignment_expression      go to state 44
    ternary_expression         go to state 45
    logical_or_expression      go to state 46
    logical_and_expression     go to state 47
    bitwise_or_expression      go to state 48
    bitwise_xor_expression     go to state 49
    bitwise_and_expression     go to state 50
    equality_expression        go to state 51
    relational_expression      go to state 52
    shift_expression           go to state 53
    additive_expression        go to state 54
    multiplicative_expression  go to state 55
    unary_expression           go to state 56
    postfix_expression         go to state 57
    primary_expression         go to state 58


State 40

  157 primary_expression: LBRACE • block_body RBRACE

    IDENTIFIER      shift, and go to state 81
    NUMBER          shift, and go to state 23
    TIME_LITERAL    shift, and go to state 24
    STRING_LITERAL  shift, and go to state 25
    FLOW            shift, and go to state 26
    EMIT            shift, and go to state 82
    DT              shift, and go to state 29
    DUR             shift, and go to state 30
    STOP            shift, and go to state 83
    START           shift, and go to state 84
    AGE             shift, and go to state 32
    PAUSE           shift, and go to state 85
    RESUME          shift, and go to state 86
    MEMORY_OP       shift, and go to state 33
    REST            shift, and go to state 34
    MINUS           shift, and go to state 35
    NOT             shift, and go to state 36
    TRIGGER         shift, and go to state 37
    LPAREN          shift, and go to state 38
    LBRACKET        shift, and go to state 39
    LBRACE          shift, and go to state 40

    $default  reduce using rule 83 (block_body)

    flow_literal               go to state 41
    generator_expression       go to state 42
    stop_statement             go to state 87
    start_statement            go to state 88
    pause_statement            go to state 89
    resume_statement           go to state 90
    block_body                 go to state 91
    block_body_statement       go to state 92
    expression                 go to state 93
    assignment_expression      go to state 44
    ternary_expression         go to state 45
    logical_or_expression      go to state 46
    logical_and_expression     go to state 47
    bitwise_or_expression      go to state 48
    bitwise_xor_expression     go to state 49
    bitwise_and_expression     go to state 50
    equality_expression        go to state 51
    relational_expression      go to state 52
    shift_expression           go to state 53
    additive_expression        go to state 54
    multiplicative_expression  go to state 55
    unary_expression           go to state 56
    postfix_expression         go to state 57
    primary_expression         go to state 58


State 41

  154 primary_expression: flow_literal •

    $default  reduce using rule 154 (primary_expression)


State 42

   28 flow_literal: generator_expression •

    $default  reduce using rule 28 (flow_literal)


State 43

   17 function_definition: IDENTIFIER ASSIGN expression •
   18                    | IDENTIFIER ASSIGN expression • lambda_block

    LAMBDA_BLOCK  shift, and go to state 94

    $default  reduce using rule 17 (function_definition)

    lambda_block  go to state 95


State 44

   97 expression: assignment_expression •

    $default  reduce using rule 97 (expression)


State 45

   98 assignment_expression: ternary_expression •

    $default  reduce using rule 98 (assignment_expression)


State 46

   99 ternary_expression: logical_or_expression •
  100                   | logical_or_expression • QUESTION ternary_options
  104 logical_or_expression: logical_or_expression • OR logical_and_expression

    OR        shift, and go to state 96
    QUESTION  shift, and go to state 97

    $default  reduce using rule 99 (ternary_expression)


State 47

  103 logical_or_expression: logical_and_expression •
  106 logical_and_expression: logical_and_expression • AND bitwise_or_expression

    AND  shift, and go to state 98

    $default  reduce using rule 103 (logical_or_expression)


State 48

  105 logical_and_expression: bitwise_or_expression •
  108 bitwise_or_expression: bitwise_or_expression • OR bitwise_xor_expression

    OR  shift, and go to state 99

    OR        [reduce using rule 105 (logical_and_expression)]
    $default  reduce using rule 105 (logical_and_expression)


State 49
